# Dissertation-Stream-Based-Signal-Analysis-Environment

./: .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt
Grafana/dashboards/: Test Dashboard-1762011349240.json
client/: .gitignore  main.py  pyproject.toml  requirements.txt
client/conf/: mosquitto.conf
client/plugins/core/: MosquittoManager.py
client/plugins/sensors/: FaceReader.py  HRVReader.py  KeyboardReader.py
client/tests/: test_mosquitto.py
client/utils/: BasePlugin.py  MQTTHelper.py  PluginManager.py  crockford_encode.py  setupLogger.py
client/widgets/: SensorControlScreen.py  SensorSelector.py
companion-app/: settings.gradle.kts
companion-app/app/: build.gradle.kts
companion-app/app/src/main/: AndroidManifest.xml
companion-app/gradle/: libs.versions.toml
companion-app/gradle/wrapper/: gradle-wrapper.properties
consumers/: smartwatch.py  wpm.py
main/: LICENSE
main/plugins/sensors/: FaceReader.py  HRVReader.py
main/tests/: test_plugin_loader.py
main/utils/: crockford_encode.py
plugins/Mosquitto/: MosquittoLauncher.py
plugins/MosquittoLauncher/: MosquittoLauncher.py
producers/keylogger/: keylogger.py  requirements.txt
server/: .gitignore  docker-compose.yml
server/conf/: mosquitto.conf  prometheus.yml  start-connect.sh
server/conf/connectors/: influxdb-sink.json  mqtt-source.json
server/connect/: Dockerfile
server/grafana/dashboards/: dashboard.json
tests/: test_keyboard_reader.py  test_mosquitto.py  test_mqtt_helper.py
utils/: MQTTHHelper.py  MQTTHelper.py  PluginManager.py  setupLogger.py
(+13 files in other folders)
